[package]
name = "projects"
version = "0.1.0"
edition = "2021"

[dependencies]
reed-solomon-erasure = "6.0.0"
rs_merkle = "1.5.0"
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0"

# Web server dependencies
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
